fixed whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 .DropDown {
-  width: 350px;
+  width: 380px;
   margin-left: auto;
   margin-right: auto;
 }
